# tuzka-as-a-service

./: .dockerignore  .env.app.example  .env.example  .env.local.example  .gitignore  LICENSE.txt  Makefile  NOTICE.txt  README.md  alembic.ini  api.Containerfile  docker-compose.yml  index.yaml  pyproject.toml  taas-0.1.1.tgz  taas-0.1.2.tgz  taas-0.2.0.tgz  taas-0.3.0.tgz  taas-0.4.0.tgz  taas-0.4.1.tgz  taas-0.6.0.tgz  worker.Containerfile
.github/workflows/: package-chart.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_config_and_rate_limits.py  003_job_lifecycle_config.py  004_job_requeues.py  005_job_daily_stats.py  006_job_lifecycle_timestamps.py  006_job_phase_timestamps.py  007_analytics_and_priority.py  008_backend_managed_flag.py  009_job_analytics_submitted_at_index.py
app/: README.md  config.py  deps.py  main.py
app/models/: backend.py  backend_domain.py  config.py  db.py  domain.py  job.py  job_daily_stats.py  storage_config.py  user.py
app/routers/: admin.py  dashboard.py  jobs.py  ws.py
app/schemas/: backend.py  dashboard.py  job.py  user.py
app/services/: analytics.py  auth.py  config.py  dash_session.py  engine_client.py  rate_limit.py  reaper.py  redis_jobs.py  stats.py  storage.py
app/static/: dashboard.js  index.html  style.css
app/workers/: __main__.py  cleanup.py  poller.py  submit.py
bench/: BENCHMARKS.md  DEFAULTS.md  ENGINE_MEMORY.md  PERF_REPORT.md  RESULTS_MATRIX.md  RESULTS_MATRIX_CLEAN.md  RESULTS_PAGE_WORKERS.md  RESULTS_POD_SHAPES.md  bench_batch.py  bench_matrix.py  bench_matrix_clean.py  bench_page_workers.py  bench_pod_shapes.py  bench_threads.py  page_workers_raw.tsv  pod_shapes_raw.tsv  validate_parity.py
clients/: README.md
clients/java/: pom.xml
clients/python/: pyproject.toml
clients/python/taas_client/: __init__.py  async_client.py  client.py  models.py
compat/: .env.example  Containerfile  README.md  pyproject.toml
compat/app/: config.py  main.py  retry.py  state.py
compat/app/routers/: legacy.py
deploy/: .gitignore
deploy/box/: .env.example  README.md  compose.gpu.yaml  compose.multi.example.yaml  compose.yaml  frpc.exporters.example.toml  frpc.multi.example.toml  frpc.toml
deploy/gpu-box/: .env.example  README.md  compose.yaml
deploy/helm/taas/: ARCHITECTURE.md  AUTOSCALING.md  Chart.yaml  README.md  values.yaml
deploy/helm/taas/templates/: NOTES.txt  _helpers.tpl  api.yaml  backend-register-job.yaml  cnpg-cluster.yaml  cnpg-secret.yaml  compat.yaml  configmap.yaml  httproute.yaml  ingress.yaml  migrate-job.yaml  minio-init-job.yaml  minio.yaml  ocr-engine-hpa.yaml  ocr-engine.yaml  redis.yaml  (+6 more)
deploy/local/: README.md  bench-analytics-db.sh  forward.sh  scenarios.sh  seed-users.sh  setup.sh  teardown.sh  values.local.yaml
deploy/local/engine-proxy/: compose.yaml  frpc.toml
docs/: 2026-06-13-job-lifecycle-timestamps-design.md  2026-06-13-page-workers-bench-design.md  2026-06-18-job-analytics-design.md  2026-06-29-analytics-query-scaling.md  2026-06-30-0.6.x-implementation-status.md  2026-07-02-conventions-review.md  AUTOSCALING.md  testing-from-cli.md
scripts/: minio-init.sh  seed-backend.sh  test-client-python.py  test-compat.sh  test-e2e.sh  test-ws.py  test.sh
tests/: conftest.py  dashboard_format.test.mjs  test_admin_endpoints.py  test_analytics_db.py  test_analytics_parse.py  test_compat_retry.py  test_config_resolution.py  test_engine_version.py  test_external_url.py  test_poller_requeue.py  test_poller_timestamps.py  test_rate_limit.py  test_reaper.py  test_stats_rollup.py
(+5 files in other folders)
