[project]
name = "taas"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "redis[asyncio]>=5.0",
  "miniopy-async>=1.19",
  "httpx>=0.27",
  "cryptography>=42",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "zstandard>=0.22",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["TuzkaOCR"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
