[project]
name = "taas-compat"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "httpx>=0.27",
  "redis[asyncio]>=5.0",
  "zstandard>=0.22",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]
