[project]
name = "taas-client"
version = "0.1.0"
requires-python = ">=3.11"
description = "Python client for taas OCR service"
dependencies = [
  "httpx>=0.27",
  "websockets>=12.0",
  "zstandard>=0.22",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
